# video-color-quantizer

./: .gitignore  CMakeLists.txt  README.md  doxygen_config.conf  mainpage.md
docs/: VideoReaderFFMPEG_8cpp.html  VideoReaderFFMPEG_8cpp__incl.map  VideoReaderFFMPEG_8hpp__dep__incl.md5  VideoWriterFFMPEG_8cpp.html  VideoWriterFFMPEG_8hpp_source.html  classVideoReaderFFMPEG.html  dir_40856f0cdd4bcafd28810d9265a200f7.html  dir_40856f0cdd4bcafd28810d9265a200f7_dep.md5  doxygen_config.conf  functions.html  functions_func.html  globals.html  index.html  main_8cpp__incl.map  mainpage.md  mainpage_8md.html  menudata.js  ocl__utility_8hpp__dep__incl.map  ocl__utility_8hpp__dep__incl.md5  ocl__utility_8hpp__incl.md5  video__reader_8cpp.html  video__reader_8cpp__incl.md5
html/: LICENSE.html  VideoReaderFFMPEG_8cpp__incl.md5  VideoReaderFFMPEG_8hpp.html  VideoReaderFFMPEG_8hpp__dep__incl.map  VideoReaderFFMPEG_8hpp__incl.md5  VideoReaderFFMPEG_8hpp_source.html  VideoWriterFFMPEG_8cpp__incl.map  VideoWriterFFMPEG_8cpp__incl.md5  VideoWriterFFMPEG_8hpp.html  VideoWriterFFMPEG_8hpp__dep__incl.map  VideoWriterFFMPEG_8hpp__dep__incl.md5  VideoWriterFFMPEG_8hpp__incl.map  VideoWriterFFMPEG_8hpp__incl.md5  annotated.html  classVideoReaderFFMPEG-members.html  classVideoWriterFFMPEG-members.html  classVideoWriterFFMPEG.html  classes.html  dir_40856f0cdd4bcafd28810d9265a200f7_dep.map  dir_49e56c817e5e54854c35e136979f97ca.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  globals_defs.html  graph_legend.html  main_8cpp.html  namespacemembers_func.html  namespacemembers_vars.html  namespaceocl.html  ocl__utility_8hpp.html  ocl__utility_8hpp__incl.map  uniformQuantization_8cl.html  video__reader_8cpp__incl.map  video__reader_8hpp.html  video__reader_8hpp__dep__incl.map  video__reader_8hpp__dep__incl.md5  (+3 more)
(+72 files in other folders)
